fixed text not aligned with the iframe

--- a/style.css
+++ b/style.css
@@ -860,7 +860,6 @@ iframe {
 .informations p {
     font-family: 'Montserrat', sans-serif;
     margin-top: 25px;
-    text-align: center;
 }
 
 .blocButton {
